WiP: fix left margin of sticky back-to-top  on mobile views

--- a/Childrens-Social-Care-CPD/styles/scss/components/back-to-top-link.scss
+++ b/Childrens-Social-Care-CPD/styles/scss/components/back-to-top-link.scss
@@ -16,3 +16,9 @@ div.gem-c-contents-list-with-body__sticky-element--stuck-to-window div.app-back-
     margin-top: 17px;
     margin-bottom: 17px !important;
 }
+
+@media(max-width: 40.0625em) {
+    .gem-c-contents-list-with-body__link-wrapper.gem-c-contents-list-with-body__sticky-element--stuck-to-window.govuk-width-container{
+        margin-left: 16px;
+    }
+}
